syntax = "proto3";
package tags;

// service definition

service TagsService {
  rpc addTag(AddTagRequest) returns (Result) {}
  rpc listTags(Empty) returns (TagsList) {}
}

// message type definitions

message Empty {}

message AddTagRequest {
    string tagId = 1;
    string pin = 2;
    string name = 3;
}

message AddTagResponse {
    repeated TagDetails tags = 1;
}

message TagsList {
  repeated TagDetails tags = 1;
}

message TagDetails {
  string tagId = 1;
  string pin = 2;
  string name = 3;  
}

message Result {
  string status = 1;
}